--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,67 @@
-.App {
-  text-align: center;
+*{
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  margin: 0; 
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+nav {
+  height: 100px;
+  display: flex;
+  padding: 20px 36px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.nav--logo {
+  max-width: 100px;
+}
+
+section {
+  padding: 20px;
+}
+
+.hero {
   display: flex;
   flex-direction: column;
+}
+
+.hero--photo {
+  height: 300px;
+  max-width: 800px;
+  align-self: center;
+}
+
+.hero--header{
+  margin-top: 0;
+}
+
+.card{
+  width: 400px;
+  font-size: 20px;
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  flex: 0 0 auto;
+}
+
+.card--image{
+  width:400px;
+  height: 500px;
+  border-radius: 10px;}
+
+.card--stats{
+  display: flex;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.card--star {
+  height: 25px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.cards {
+  display: flex;
+  flex-wrap: nowrap;
+  gap: 20px;
+  overflow-x: auto;
 }
